--- a/.tmux.conf
+++ b/.tmux.conf
@@ -25,3 +25,4 @@ set-option -g display-time 4000
 source "$GOPATH/src/github.com/mcartmell/limeline/tmux.conf"
 set -g status-interval 30
 set-option -ga terminal-overrides ",xterm-256color:Tc"
+new-session -n $HOST
