--- a/.gitconfig
+++ b/.gitconfig
@@ -1,9 +1,7 @@
-[core]
-  pager = less -r
 [diff]
 	renamelimit = 5000
 [color]
-  ui = auto
+	ui = true
   interactive = auto
 [alias]
   s = status -uno
@@ -39,3 +37,17 @@
 	email = mike@mikec.me
 [push]
 	default = simple
+[pager]
+    diff = delta
+    log = delta
+    reflog = delta
+    show = delta
+[interactive]
+    diffFilter = delta --color-only
+[delta]
+    features = side-by-side line-numbers decorations
+    whitespace-error-style = 22 reverse
+[delta "decorations"]
+    commit-decoration-style = bold yellow box ul
+    file-style = bold yellow ul
+    file-decoration-style = none
