--- a/.gitmodules
+++ b/.gitmodules
@@ -20,11 +20,17 @@
 	path = .vim/plugins/start/vim-goimports
 	url = git@github.com:mattn/vim-goimports.git
 [submodule ".vim/pack/dist/start/vim-airline"]
-	path = .vim/pack/dist/start/vim-airline
+	path = .vim/pack/plugins/start/vim-airline
 	url = git@github.com:vim-airline/vim-airline
 [submodule ".vim/pack/dist/start/vim-airline-themes"]
-	path = .vim/pack/dist/start/vim-airline-themes
+	path = .vim/pack/plugins/start/vim-airline-themes
 	url = https://github.com/vim-airline/vim-airline-themes
 [submodule ".vim/pack/git-plugins/start/ale"]
-	path = .vim/pack/git-plugins/start/ale
+	path = .vim/pack/plugins/start/ale
 	url = https://github.com/dense-analysis/ale.git
+[submodule ".vim/pack/plugins/start/vim-goimports"]
+	path = .vim/pack/plugins/start/vim-goimports
+	url = git@github.com:mattn/vim-goimports.git
+[submodule ".vim/pack/plugins/start/nerdtree"]
+	path = .vim/pack/plugins/start/nerdtree
+	url = git@github.com:preservim/nerdtree.git
